--- a/swordgame/index.html
+++ b/swordgame/index.html
@@ -8,8 +8,8 @@
 
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
-
     <script src="libraries/p5.play.js" type="text/javascript"></script>
+    <script src="libraries/p5.clickable.js" type="text/javascript"></script>
 
     <script src="sketch.js" type="text/javascript"></script>
 
