--- a/swordgame/index.html
+++ b/swordgame/index.html
@@ -11,8 +11,10 @@
     <script src="libraries/p5.play.js" type="text/javascript"></script>
     <script src="libraries/p5.clickable.js" type="text/javascript"></script>
 
-    <script src="title.js" type="text/javascript"></script>
+    <!-- <script src="title.js" type="text/javascript"></script> -->
     <script src="cc.js" type="text/javascript"></script>
+    <!-- <script src="sketch.js" type="text/javascript"></script> -->
+
 
     <style>
         body {
