heads/faces in asset folder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
     <script src="libraries/p5.play.js" type="text/javascript"></script>
 
-    <script src="sketch.js" type="text/javascript"></script>
+    <!-- <script src="purpleboxtest.js" type="text/javascript"></script> -->
+    <script src="tst/facepicker.js" type="text/javascript"></script>
+
 
     <style>
         body {
