3 faces to choose from, scaling issues

--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Untitled</title>
+    <title>SamuraiBuilder</title>
     <script src="libraries/p5.js" type="text/javascript"></script>
-
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
-
     <script src="libraries/p5.play.js" type="text/javascript"></script>
 
-    <!-- <script src="purpleboxtest.js" type="text/javascript"></script> -->
-    <script src="tst/facepicker.js" type="text/javascript"></script>
+    <script src="tst/sketch.js" type="text/javascript"></script>
+    <script src="tst/head.js" type="text/javascript"></script>
+    <script src="tst/face.js" type="text/javascript"></script>
 
 
     <style>
