--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <script src="libraries/p5.play.js" type="text/javascript"></script>
 
     <script src="tst/sketch.js" type="text/javascript"></script>
-    <script src="tst/head.js" type="text/javascript"></script>
+    <script src="tst/body.js" type="text/javascript"></script>
     <script src="tst/face.js" type="text/javascript"></script>
 
 
