--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 
     <script src="tst/sketch.js" type="text/javascript"></script>
     <script src="tst/body.js" type="text/javascript"></script>
+    <script src="tst/pattern.js" type="text/javascript"></script>
+    <script src="tst/hair.js" type="text/javascript"></script>
     <script src="tst/face.js" type="text/javascript"></script>
 
 
