--- a/public/user.html
+++ b/public/user.html
@@ -22,23 +22,28 @@
             showcase.empty();
             let body = document.createElement('img');
             body.src = "http://localhost:5000/assets/bodyfinish.png";
+            $(body).css('height', '420px');
+            $(body).css('width', '225px');
             $(body).css('z-index', '0');
             showcase.append(body);
             let face = document.createElement('img');
             face.src = "http://localhost:5000/assets/" + result.face + ".png";
-            $(face).css('height', '12px');
-            $(face).css('width', '21px');
+            $(face).css('height', '60px');
+            $(face).css('width', '105px');
             $(face).css('position', 'absolute');
-            $(face).css('top', '4px');
+            $(face).css('top', '24px');
             $(face).css('z-index', '1');
             showcase.append(face);
             let hair = document.createElement('img');
             hair.src = "http://localhost:5000/assets/" + result.hair + ".png";
-            $(hair).css('height', '21px');
-            $(hair).css('width', '35px');
+            $(hair).css('height', '105px');
+            $(hair).css('width', '175px');
             $(hair).css('position', 'absolute');
-            $(hair).css('top', '-3')
-            $(hair).css('z-index', '2');
+            $(hair).css('top', '-30px');
+            if (result.hair == "hair1") {
+              $(hair).css('top', '-5px');
+            }
+            $(hair).css('z-index', '-1');
             showcase.append(hair);
             let pattern = document.createElement('img');
             pattern.src = "http://localhost:5000/assets/" + result.pattern + ".png";
@@ -89,7 +94,7 @@
     </nav>
     <div class="container">
       <div class="row">
-        <div id="showcase" class="mt-2 col-12 d-flex justify-content-center">
+        <div id="showcase" class="mt-5 col-12 d-flex justify-content-center">
             <img src="http://i.stack.imgur.com/SBv4T.gif" alt="slowpoke" width="300rem"/>
         </div>
         <div id="message" class="mt-2 col-12 d-flex justify-content-center">
