Updating pattern position

--- a/public/user.html
+++ b/public/user.html
@@ -47,10 +47,11 @@
             showcase.append(hair);
             let pattern = document.createElement('img');
             pattern.src = "http://localhost:5000/assets/" + result.pattern + ".png";
-            $(pattern).css('height', '32px');
-            $(pattern).css('width', '42px');
+            $(pattern).css('height', '160px');
+            $(pattern).css('width', '210px');
             $(pattern).css('position', 'absolute');
-            $(pattern).css('top', '23')
+            $(pattern).css('top', '115')
+            $(pattern).css('left', '373px')
             $(pattern).css('z-index', '-1');
             showcase.append(pattern);
             $("#message").text(username + "'s Samurai");
